Ejercicios 1-8 completo hasta el 17

--- a/week2/day2/exercises/Exercises_1-8.ipynb
+++ b/week2/day2/exercises/Exercises_1-8.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -618,19 +618,21 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "False\n"
+     "text": "El valor de zona es:  False\n"
     }
    ],
    "source": [
     "#your code here\n",
-    "zona = None\n",
-    "if int(lista[5]) > 7:\n",
-    "    if lista[2] == False:\n",
-    "        if lista[0] + int(lista[5]) < 24:\n",
-    "            zona = True\n",
-    "    else:\n",
-    "        zona = False\n",
-    "print (zona)"
+    "def funcion_zona():\n",
+    "    zona = None\n",
+    "    if int(lista[5]) > 7:\n",
+    "        if lista[2] == False:\n",
+    "            if lista[0] + int(lista[5]) < 24:\n",
+    "                zona = True\n",
+    "        else:\n",
+    "            zona = False\n",
+    "    return (zona)\n",
+    "print (\"El valor de zona es: \",funcion_zona())"
    ]
   },
   {
@@ -642,11 +644,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "valor_zona = funcion_zona()\n",
+    "def funcion_comprobacion():\n",
+    "    if valor_zona == True:\n",
+    "        return (valor_zona)\n",
+    "valor_zona"
    ]
   },
   {
@@ -658,11 +674,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "lista de alumnos y estaturas:\n(0, ['Jalex', 1.8])\n(1, ['Tomas', 1.8])\n(2, ['David', 1.81])\n(3, ['Natalio', 1.73])\n(4, ['Monica', 1.73])\n(5, ['Roxanna', 1.75])\n(6, ['Filipa', 1.64])\n(7, ['Elsa', 1.89])\n(8, ['Cristina', 1.7])\n(9, ['Clara', 1.67])\n(10, ['Alba', 1.68])\n(11, ['Valeria', 1.6])\n(12, ['Jose Luis', 1.69])\n(13, ['Gabriel', 1.76])\n(14, ['Rochi', 1.6])\n(15, ['Jose Maria', 1.75])\nNone\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "lista_alumnos = ([\"Jalex\", 1.80], [\"Tomas\", 1.80], [\"David\", 1.81], [\"Natalio\", 1.73], [\"Monica\", 1.73], [\"Roxanna\",1.75], [\"Filipa\",1.64], [\"Elsa\", 1.89], [\"Cristina\", 1.70], [\"Clara\", 1.67], [\"Alba\", 1.68], [\"Valeria\", 1.60], [\"Jose Luis\", 1.69], [\"Gabriel\", 1.76], [\"Rochi\", 1.60], [\"Jose Maria\", 1.75])\n",
+    "def Swartzenneger():\n",
+    "    for alumno in enumerate (lista_alumnos):\n",
+    "        print (alumno)\n",
+    "print (\"lista de alumnos y estaturas:\")\n",
+    "print (Swartzenneger())"
    ]
   },
   {
