ejercicio 1-8 completo hasta el 19

--- a/week2/day2/exercises/Exercises_1-8.ipynb
+++ b/week2/day2/exercises/Exercises_1-8.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "metadata": {
     "tags": []
    },
@@ -682,7 +682,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "lista de alumnos y estaturas:\n(0, ['Jalex', 1.8])\n(1, ['Tomas', 1.8])\n(2, ['David', 1.81])\n(3, ['Natalio', 1.73])\n(4, ['Monica', 1.73])\n(5, ['Roxanna', 1.75])\n(6, ['Filipa', 1.64])\n(7, ['Elsa', 1.89])\n(8, ['Cristina', 1.7])\n(9, ['Clara', 1.67])\n(10, ['Alba', 1.68])\n(11, ['Valeria', 1.6])\n(12, ['Jose Luis', 1.69])\n(13, ['Gabriel', 1.76])\n(14, ['Rochi', 1.6])\n(15, ['Jose Maria', 1.75])\nNone\n"
+     "text": "lista de alumnos y estaturas:\n------\n0 ['Jalex', 1.8]\n1 ['Tomas', 1.8]\n2 ['David', 1.81]\n3 ['Natalio', 1.73]\n4 ['Monica', 1.73]\n5 ['Roxanna', 1.75]\n6 ['Filipa', 1.64]\n7 ['Elsa', 1.89]\n8 ['Cristina', 1.7]\n9 ['Clara', 1.67]\n10 ['Alba', 1.68]\n11 ['Valeria', 1.6]\n12 ['Jose Luis', 1.69]\n13 ['Gabriel', 1.76]\n14 ['Rochi', 1.6]\n15 ['Jose Maria', 1.75]\n------\n"
     }
    ],
    "source": [
@@ -690,8 +690,11 @@
     "lista_alumnos = ([\"Jalex\", 1.80], [\"Tomas\", 1.80], [\"David\", 1.81], [\"Natalio\", 1.73], [\"Monica\", 1.73], [\"Roxanna\",1.75], [\"Filipa\",1.64], [\"Elsa\", 1.89], [\"Cristina\", 1.70], [\"Clara\", 1.67], [\"Alba\", 1.68], [\"Valeria\", 1.60], [\"Jose Luis\", 1.69], [\"Gabriel\", 1.76], [\"Rochi\", 1.60], [\"Jose Maria\", 1.75])\n",
     "def Swartzenneger():\n",
     "    for alumno in enumerate (lista_alumnos):\n",
-    "        print (alumno)\n",
+    "        if alumno != None:\n",
+    "            print (alumno[0], alumno[1])\n",
+    "    return \"------\"\n",
     "print (\"lista de alumnos y estaturas:\")\n",
+    "print (\"------\")\n",
     "print (Swartzenneger())"
    ]
   },
@@ -704,12 +707,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 107,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "El valor de zona es:  False\n"
+    }
+   ],
    "source": [
     "#your code here\n",
-    "hols=\"klfklñg\""
+    "r = input (\"¿Te gusta la montaña?\")\n",
+    "if r == \"no\":\n",
+    "    funcion_zona()   \n",
+    "print (\"El valor de zona es: \",funcion_zona())"
    ]
   },
   {
@@ -721,11 +735,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 111,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "nada\nnada15\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 111
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "def f_s():\n",
+    "    h = \"nada\"\n",
+    "    print (h)\n",
+    "    print (h + str(lista[0]))\n",
+    "    if (len(h+str(lista[0]))) == 6:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "f_s()"
    ]
   },
   {
