--- a/week2/day2/exercises/Exercises_1-8.ipynb
+++ b/week2/day2/exercises/Exercises_1-8.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
       "text/plain": "False"
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 24
     }
    ],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -751,7 +751,7 @@
       "text/plain": "True"
      },
      "metadata": {},
-     "execution_count": 111
+     "execution_count": 27
     }
    ],
    "source": [
@@ -776,11 +776,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 79,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "lista_aux = [\"uno\",\"dos\",\"tres\",\"cuatro\",\"cinco\",\"seis\",\"siete\"]\n"
    ]
   },
   {
