--- a/week2/day2/exercises/Exercises_1-8.ipynb
+++ b/week2/day2/exercises/Exercises_1-8.ipynb
@@ -776,14 +776,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "nada\nnada15\n"
+    }
+   ],
    "source": [
     "#your code here\n",
-    "lista_aux = [\"uno\",\"dos\",\"tres\",\"cuatro\",\"cinco\",\"seis\",\"siete\"]\n"
+    "lista_aux = [\"uno\",\"dos\",\"tres\",\"cuatro\",\"cinco\",\"seis\",\"siete\"]\n",
+    "def funcion_usa_f_s (f_s , lista):\n",
+    "    for elemento in lista_aux:\n",
+    "        lista = elemento\n",
+    "        if f_s == True:\n",
+    "            lista_aux.pop(0)\n",
+    "funcion_usa_f_s(f_s= f_s() , lista= lista_aux)\n"
    ]
   },
   {
@@ -795,11 +807,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "def numeros_pares(arg1):\n",
+    "    lista_pares = []\n",
+    "    arg1 = int(arg1)\n",
+    "    for x in range(arg1*2):\n",
+    "        if x % 2 == 0:\n",
+    "            lista_pares.append(x)\n",
+    "    print(lista_pares)\n",
+    "numeros_pares(10)"
    ]
   },
   {
@@ -811,11 +839,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22]\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-63-7f7a33105c4f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mlista_pares\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mf_s\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mfuncion_punetera\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0marg1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-63-7f7a33105c4f>\u001b[0m in \u001b[0;36mfuncion_punetera\u001b[1;34m(arg1)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncion_punetera\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marg1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mlista_pares\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumeros_pares\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marg1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlista_pares\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mlista_pares\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "def funcion_punetera(arg1):\n",
+    "    lista_pares = numeros_pares(arg1)\n",
+    "    if len(lista_pares) % 2 == 0:\n",
+    "        lista_pares.pop()\n",
+    "    else:\n",
+    "        lista_pares.append (f_s)\n",
+    "funcion_punetera (arg1=12)"
    ]
   },
   {
