--- a/week1/day3/exercises/Exercises.ipynb
+++ b/week1/day3/exercises/Exercises.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "' No entiendo el enunciado '"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "\"\"\" No entiendo el enunciado \"\"\""
    ]
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -265,26 +274,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": "Gabriel\nRosario\nClara\nFilipa\nRochi\nTomas\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-76675d7f9ca8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0macum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0macum\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mfuncion_recorre\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlista_alumnos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-17-76675d7f9ca8>\u001b[0m in \u001b[0;36mfuncion_recorre\u001b[1;34m(lista)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0macum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0melemento\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlista\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0macum\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0macum\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mfuncion_recorre\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlista_alumnos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
     }
    ],
    "source": [
     "def funcion_recorre (lista):\n",
     "    acum = 0\n",
     "    for elemento in lista:\n",
-    "        print (lista[acum])\n",
-    "        acum += 2\n",
+    "        if acum < len(lista_alumnos):\n",
+    "            print (lista[acum])\n",
+    "            acum += 2\n",
+    "        else:\n",
+    "            break\n",
     "funcion_recorre (lista = lista_alumnos)"
    ]
   },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -336,21 +336,21 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['Jalex', 1.8]\n['Tomas', 1.8]\n['David', 1.81]\n['Roxanna', 1.75]\n['Elsa', 1.89]\n['Gabriel', 1.76]\n['Jose Maria', 1.75]\n"
+     "text": "1.8\n1.8\n1.81\n1.75\n1.89\n1.76\n1.75\n"
     }
    ],
    "source": [
-    "# Crear función 'funcion_altura_v1'\n",
+    "# Crear función 'funcion_altura_v1' que muestra solo las alturas que sean mayores o iguales que 175cms\n",
     "def funcion_altura_v1():\n",
     "    for elemento in lista_alturas:\n",
     "        if elemento[1] >= 1.75:\n",
-    "            print (elemento)\n",
+    "            print (elemento[1])\n",
     "funcion_altura_v1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "# Crear función 'funcion_altura_v2'\n",
+    "# Crear función 'funcion_altura_v2' que muestra sólo el índice en la lista del valor de la altura que está recorriendo\n",
     "def funcion_altura_v2():\n",
     "    for elemento in lista_alturas:\n",
     "        print(lista_alturas.index(elemento))\n",
@@ -371,28 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-35-55e0ecd44c57>, line 9)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-35-55e0ecd44c57>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    funcion_altura_v3(alumno=x, altura)\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1.73 Natalio\n1.73 Natalio\n1.64 Filipa\n1.7 Cristina\n1.67 Clara\n1.68 Alba\n1.6 Valeria\n1.69 Jose Luis\n1.6 Valeria\n"
     }
    ],
    "source": [
-    "alturas = [[ 1.80], [ 1.80], [ 1.81], [ 1.73], [ 1.73], [1.75], [1.64], [ 1.89], [ 1.70], [ 1.67], [ 1.68], [ 1.60], [ 1.69], [ 1.76], [1.60], [1.75]]\n",
+    "alturas = [1.80, 1.80,  1.81, 1.73, 1.73, 1.75, 1.64, 1.89, 1.70, 1.67, 1.68, 1.60, 1.69, 1.76, 1.60, 1.75]\n",
     "alumnos = [\"Jalex\", \"Tomas\", \"David\", \"Natalio\", \"Monica\", \"Roxanna\", \"Filipa\", \"Elsa\", \"Cristina\", \"Clara\", \"Alba\", \"Valeria\", \"Jose Luis\", \"Gabriel\", \"Rochi\", \"Jose Maria\"]\n",
-    "# Crear función 'funcion_altura_v3'\n",
-    "def funcion_altura_v3 (alumno, altura):\n",
-    "    for x in alumnos:\n",
-    "        altura = altura.index(alumno)\n",
+    "# Crear función 'funcion_altura_v3' que muestra las alturas que sean menores que 175 ACOMPAÑADO del nombre de la persona que tenga esa altura\n",
+    "def funcion_altura_v3():\n",
+    "    for altura in alturas:\n",
+    "        pos = alturas.index(altura)\n",
+    "        alumno = alumnos[pos]\n",
     "        if altura < 1.75:\n",
-    "            print (alumno, altura)\n",
-    "funcion_altura_v3(alumno=x, altura)"
+    "            print (altura, alumno)\n",
+    "\n",
+    "funcion_altura_v3()"
    ]
   },
   {
